new file:   .prettierrc new file:   .vscode/settings.json modified:   config-overrides.js modified:   package-lock.json modified:   package.json deleted:    src/App.js modified:   src/App.test.js new file:   src/assets/fonts/TikTokDisplayFont-Bold.woff2 new file:   src/assets/fonts/TikTokFont-Bold.woff2 new file:   src/assets/fonts/TikTokFont-Regular.woff2 new file:   src/assets/fonts/TikTokFont-Semibold.woff2 new file:   src/assets/images/index.js new file:   src/assets/logoReact.svg new file:   src/assets/logoTiktok.svg new file:   src/components/AccountItem/AccountItem.js new file:   src/components/AccountItem/AccountItem.module.scss new file:   src/components/AccountItem/index.js renamed:    src/App.css -> src/components/App/App.css new file:   src/components/App/App.js new file:   src/components/App/index.js modified:   src/components/Button/Button.js new file:   src/components/Button/Button.module.scss new file:   src/components/GlobalStyles/GlobalStyles.js new file:   src/components/GlobalStyles/GlobalStyles.scss new file:   src/components/GlobalStyles/index.js new file:   src/components/Popper/Popper.module.scss new file:   src/components/Popper/Wrapper.js new file:   src/components/Popper/index.js deleted:    src/index.css modified:   src/index.js new file:   src/layouts/DefaultLayout/DefaultLayout.js new file:   src/layouts/DefaultLayout/DefaultLayout.module.scss new file:   src/layouts/DefaultLayout/index.js new file:   src/layouts/OnlyHeader/OnlyHeader.js new file:   src/layouts/OnlyHeader/index.js new file:   src/layouts/components/Footer/Footer.js new file:   src/layouts/components/Footer/index.js new file:   src/layouts/components/Header/Header.js new file:   src/layouts/components/Header/Header.module.scss new file:   src/layouts/components/Header/index.js new file:   src/layouts/components/Sidebar/Sidebar.js new file:   src/layouts/components/Sidebar/Sidebar.module.scss new file:   src/layouts/components/Sidebar/index.js new file:   src/layouts/comp

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,15 +1,21 @@
 .App {
-  text-align: center;
+
 }
 
 .App-logo {
-  height: 40vmin;
+  position: fixed;
+  right: 8px;
+  top: 8px;
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
   pointer-events: none;
+  background-color: #282c34;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 10s linear;
   }
 }
 
