--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     font-weight: 700;
     min-width: 100px;
@@ -26,6 +27,10 @@
 .icon + .content,
 .content + .icon {
     margin-left: 8px;
+}
+
+.icon {
+    width: 20px;
 }
 
 // Button styles
