--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,13 +1,11 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 :root {
     --primary: #fe2c55;
     --black: #000;
     --white: #fff;
-    --text-color: #333;
-    --font-family: "Roboto", sans-serif;
-    // --font-family: 'TikTokFont', TikTokDisplayFont;
+    --text-color: #161823;
+    --font-family: 'TikTokFont', TikTokDisplayFont;
 
     // Default layout
     --default-layout-header-height: 60px;
@@ -74,12 +72,6 @@ a {
 
 // Fonts embedded
 @font-face {
-    font-family: TikTokDisplayFont;
-    src: url('../../assets/fonts/TikTokDisplayFont-Bold.woff2');
-    font-weight: 500;
-}
-
-@font-face {
     font-family: TikTokFont;
     src: url('../../assets/fonts/TikTokFont-Regular.woff2');
     font-weight: 400;
@@ -87,14 +79,20 @@ a {
 
 @font-face {
     font-family: TikTokFont;
-    src: url('../../assets/fonts/TikTokFont-Bold.woff2');
-    font-weight: 500;
+    src: url('../../assets/fonts/TikTokFont-Semibold.woff2');
+    font-weight: 600;
 }
 
 @font-face {
     font-family: TikTokFont;
-    src: url('../../assets/fonts/TikTokFont-Semibold.woff2');
+    src: url('../../assets/fonts/TikTokFont-Bold.woff2');
     font-weight: 700;
+}
+
+@font-face {
+    font-family: TikTokDisplayFont;
+    src: url('../../assets/fonts/TikTokDisplayFont-Bold.woff2');
+    font-weight: 500;
 }
 
 // Custom tippy tooltips
