modified:   .gitignore 	modified:   public/favicon.ico 	modified:   public/index.html 	deleted:    src/components/AccountItem/AccountItem.module.scss 	modified:   src/components/App/App.css 	modified:   src/components/App/App.js 	modified:   src/components/Button/Button.js 	modified:   src/components/Button/Button.module.scss 	modified:   src/components/GlobalStyles/GlobalStyles.js 	modified:   src/components/GlobalStyles/GlobalStyles.scss 	modified:   src/components/Icons/index.js 	new file:   src/components/Image/Image.js 	modified:   src/components/Image/index.js 	modified:   src/components/Popper/Menu/HeaderMenu.js 	modified:   src/components/Popper/Menu/Menu.js 	modified:   src/components/Popper/Menu/Menu.module.scss 	modified:   src/components/Popper/Menu/MenuItem.js 	modified:   src/components/Popper/Popper.module.scss 	modified:   src/components/Popper/Wrapper.js 	new file:   src/config/index.js 	new file:   src/config/routes.js 	new file:   src/data/constants.js 	new file:   src/data/index.js 	deleted:    src/layouts/DefaultLayout/DefaultLayout.js 	deleted:    src/layouts/DefaultLayout/DefaultLayout.module.scss 	deleted:    src/layouts/DefaultLayout/index.js 	new file:   src/layouts/MainLayout/MainLayout.js 	new file:   src/layouts/MainLayout/MainLayout.module.scss 	new file:   src/layouts/MainLayout/index.js 	modified:   src/layouts/OnlyHeader/OnlyHeader.js 	new file:   src/layouts/OnlyHeader/OnlyHeader.module.scss 	new file:   src/layouts/components/Container/Container.js 	new file:   src/layouts/components/Container/Container.module.scss 	new file:   src/layouts/components/Container/index.js 	modified:   src/layouts/components/Footer/Footer.js 	modified:   src/layouts/components/Footer/Footer.module.scss 	modified:   src/layouts/components/Header/Header.js 	modified:   src/layouts/components/Header/Header.module.scss 	renamed:    src/components/AccountItem/AccountItem.js -> src/layouts/components/Search/AccountItem/AccountItem.js 	new file:   src/layouts

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,21 +1,18 @@
-.App {
-
-}
-
 .App-logo {
   position: fixed;
-  right: 8px;
-  top: 8px;
-  height: 48px;
-  width: 48px;
+  left: 0;
+  top: 16px;
+  height: 24px;
+  width: 24px;
   border-radius: 50%;
   pointer-events: none;
   background-color: #282c34;
+  z-index: 100;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 10s linear;
+    animation: App-logo-spin infinite 3s linear;
   }
 }
 
