--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -1,13 +1,15 @@
 .wrapper {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
     min-width: 224px;
+    width: 100%;
     min-height: 100px;
+    max-height: min(100vh - 136px);
     padding-top: 8px;
     background: var(--white);
     box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 12px;
     border-radius: 8px;
     box-sizing: border-box;
-    max-height: min(100vh - 156px, 760px);
     overflow: hidden auto;
     list-style-type: none;
     padding-inline-start: 0px;
