--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -4,21 +4,31 @@
   --search-top-spacer: 9px;
   --search-btn-width: 52px;
 
-  width: 100%;
-  height: var(--default-layout-header-height, 60px);
-  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
   display: flex;
   justify-content: center;
+  width: 100%;
+  height: var(--default-layout-header-height, 60px);
   box-shadow: 0px 1px 1px rgb(0, 0, 0, 0.12);
+  background-color: var(--white);
 }
 
 .content {
   height: 100%;
   width: var(--default-layout-width, 1150px);
-  padding: 0 var(--default-layout-horizontal-spacer);
+  padding: 0 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.logo {
+  display: flex;
+  min-width: 300px;
+  position: relative;
 }
 
 // Actions
@@ -40,8 +50,9 @@
   position: relative;
   font-size: 2.4rem;
   color: #161823;
-  padding: 4px 6px;
+  padding: 4px;
   margin-left: 12px;
+  margin-top: 8px;
   background-color: transparent;
   cursor: pointer;
 }
