--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -1,4 +1,3 @@
-
 .search, .search-result {
     width: 361px;
 }
@@ -12,11 +11,12 @@
     background-color: #1618230f;
     border-radius: var(--search-border-radius);
     border: 1.5px solid transparent;
-
+    
     input {
         flex: 1;
         height: 100%;
         color: var(--black);
+        font-family: var(--font-family);
         font-size: 1.6rem;
         background-color: transparent;
         caret-color: var(--primary);
