--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -44,18 +44,19 @@ body {
 }
 
 html *::-webkit-scrollbar {
-    border-radius: 0;
+    border-radius: 8px;
     width: 8px;
 }
 
 html *::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(22, 24, 35, 0.15);
+    border-radius: 8px;
+    // background-image: linear-gradient(to bottom, #ffc400, #00aefd);
+    background-color: rgb(254, 44, 85, 0.3);
 }
 
 html *::-webkit-scrollbar-track {
-    border-radius: 0;
-    background-color: rgba(0, 0, 0, 0);
+    border-radius: 8px;
+    background-color: rgba(254, 44, 85, 0.2);
 }
 
 button,
@@ -95,25 +96,7 @@ a {
     font-weight: 500;
 }
 
-// Custom tippy tooltips
-body {
-    .tippy-box {
-        background-color: rgba(84, 84, 84, 92%);
-        font-weight: 600;
-        font-size: 1.6rem;
-        line-height: 2.2rem;
-        border-radius: 8px;
-    }
-
-    .tippy-box[data-placement^='bottom'] > .tippy-arrow::before {
-        top: -8px;
-    }
-
-    .tippy-arrow {
-        color: rgba(84, 84, 84, 92%);
-    }
-
-    .tippy-content {
-        padding: 8px 9px;
-    }
-}
+// white-space: nowrap;
+// text-overflow: ellipsis;
+// -webkit-line-clamp: 2;
+// -webkit-box-orient: vertical;
