--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -18,11 +18,11 @@
 // Menu item
 .menu-item {
   width: 224px;
+  height: 40px;
   width: 100%;
   justify-content: flex-start;
   border-radius: 0;
-  padding: 10px 16px;
-  line-height: 1.8rem;
+  padding: 8px 16px;
 
   &.separate {
     border-top: 1px solid rgba(22, 24, 35, 0.12);
