--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -7,7 +7,7 @@
     max-height: min(100vh - 136px);
     padding-top: 8px;
     background: var(--white);
-    box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 12px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0 2px 12px;
     border-radius: 8px;
     box-sizing: border-box;
     overflow: hidden auto;
