--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -38,21 +38,15 @@
   justify-content: center;
 }
 
-.menu-btn {
-  font-size: 2rem;
-  margin-left: 20px;
-  padding: 4px 8px;
-  background-color: transparent;
-  cursor: pointer;
-}
-
 .actions-btn {
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 3px;
   font-size: 2.4rem;
   color: #161823;
-  padding: 4px;
-  margin-left: 12px;
-  margin-top: 8px;
   background-color: transparent;
   cursor: pointer;
 }
@@ -77,6 +71,9 @@
   height: 32px;
   object-fit: cover;
   border-radius: 50%;
-  margin-left: 12px;
   cursor: pointer;
+}
+
+.actions-btn, .user-avatar {
+  margin-left: 12px;
 }
