--- a/src/layouts/components/Sidebar/FollowingAccounts/PreviewItem/PreviewItem.module.scss
+++ b/src/layouts/components/Sidebar/FollowingAccounts/PreviewItem/PreviewItem.module.scss
@@ -18,8 +18,13 @@
 
 .avatar {
   width: 100%;
+  height: 100%;
   border-radius: 50%;
   object-fit: cover;
+}
+
+.followed {
+  background-color: rgba(22, 24, 35, 0.08);
 }
 
 .content {
@@ -33,6 +38,7 @@
 .info-item {
   display: flex;
   align-items: center;
+  overflow-wrap: anywhere;
 }
 
 .nickname {
